--- a/.github/workflows/CalculatorTests.yml
+++ b/.github/workflows/CalculatorTests.yml
@@ -1,10 +1,8 @@
-name: Run NUnit Tests
+name: Run NUnit Tests and Build Docker Image
 
 on:
   push:
-    branches: master
-  #pull_request:
-    #branches: [ main ]
+    branches: [master]
 
 jobs:
   build-and-test:
@@ -27,3 +25,22 @@ jobs:
 
       - name: Test with NUnit
         run: dotnet test --no-build --configuration Release --logger:"console;verbosity=normal"
+
+      # --- Build Docker image ---
+      - name: Build Docker image
+        run: docker build -t calculatorapp:latest .
+
+      # --- Optional: Log in to Docker Hub ---
+      - name: Log in to Docker Hub
+        if: github.ref == 'refs/heads/master'  # Only on pushes to master
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.swainsumanta01@gmail.com }}
+          password: ${{ secrets.Sumanta@123 }}
+
+      # --- Optional: Push Docker image ---
+      - name: Push Docker image to Docker Hub
+        if: github.ref == 'refs/heads/master'  # Only on pushes to master
+        run: |
+          docker tag calculatorapp:latest ${{ secrets.DOCKER_USERNAME }}/calculatorapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/calculatorapp:latest
