--- a/.github/workflows/CalculatorTests.yml
+++ b/.github/workflows/CalculatorTests.yml
@@ -35,7 +35,7 @@ jobs:
         if: github.ref == 'refs/heads/master'  # Only on pushes to master
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.swainsumanta01@gmail.com }}
+          username: ${{ secrets.2170199 }}
           password: ${{ secrets.Sumanta@123 }}
 
       # --- Optional: Push Docker image ---
